<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="387dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mensaje2"
        android:textAlignment="viewStart"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="#1E3F51B5"
                android:baselineAligned="false"
                android:touchscreenBlocksFocus="false">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvEstudios"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbPrimarioIncompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/primarioIncompleto"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbPrimarioCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/primarioCompleto"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbSecundarioIncompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secundarioIncompleto"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbSecundarioCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secundarioCompleto"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbOtros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otros"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/intereses"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="379dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E3F51B5">

                    <CheckBox
                        android:id="@+id/cbDeporte"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:text="@string/deporte"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/cbMusica"
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:text="@string/musica"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1E3F51B5">

                    <CheckBox
                        android:id="@+id/cbArte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arte"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/cbTecnologia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tecnologia"
                        android:textSize="16sp" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="381dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="281dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvInfo" />

                    <Switch
                        android:id="@+id/switchInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="10dp"
                android:onClick="Guardar"
                android:text="@string/btnGuardar"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>